<?xml version="1.0"?>
<package format="2">
  <name>ls_controller</name>
  <version>0.0.1</version>
  <description>The ls_controller package</description>

  <maintainer email="xuanbowang@lslidar.com">wangbx</maintainer>
  <license>LGPLv3</license>
  <author >wangbx</author>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>ls_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>actionlib_msgs</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>ls_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>actionlib_msgs</exec_depend>

  <export>

  </export>
</package>
