<?xml version="1.0"?>
<package format="2">
  <name>ls_laser_sensor</name>
  <version>0.1.0</version>
  <description>This is ls_laser_sensor package for leishen_robot.
</description>
  <maintainer email="xuanbowang@lslidar.com">wangbx</maintainer>
  <license>Apache 2.0</license>
  <author >wangbx</author>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>ls_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>ls_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
